--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
-export default function Navbar() {
-  return (
-    <nav className="navbar">
-      <h1 className="page-title">Filmes</h1>
-    </nav>
-  )
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>React Movies</title>
+</head>
+<body>
+  <link rel="stylesheet" href="./src/pages/Details.jsx">
+  <link rel="stylesheet" href="./src/pages/Home.jsx">
+  <link rel="stylesheet" href="./src/pages/Favorites.jsx">
+  
+</body>
+</html>
