--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>React Movies</title>
 </head>
 <body>
-  <link rel="stylesheet" href="./src/pages/Details.jsx">
-  <link rel="stylesheet" href="./src/pages/Home.jsx">
-  <link rel="stylesheet" href="./src/pages/Favorites.jsx">
+  
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
   
 </body>
 </html>
